# VeriNode

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
resources/sample/: QMC.md
src/verinode/: database.py  extraction_types.py  main.py  models.py  prompts.py  sandbox_types.py  schemas.py  settings.py  verification_types.py  web_evidence_types.py
src/verinode/acquirers/: base.py  tinyfish.py
src/verinode/clients/: tinyfish.py
src/verinode/extractors/: base.py  openai.py
src/verinode/sandboxes/: base.py  openai.py
src/verinode/services/: documents.py  extraction.py  job_runner.py  jobs.py  references.py  sandbox.py  verification.py  web_evidence.py
src/verinode/verifiers/: base.py  openai.py
tests/: test_api.py  test_live_integrations.py  test_references.py  test_sandbox_api.py  test_tinyfish_acquirer.py  test_verification_api.py  test_web_evidence_api.py
